# db-mcp

./: .env  .env.example  .gitignore  README.md  client.py  main.py  mongodb_server.py  pyproject.toml  requirements.txt
archived_sample/client/: mongo_agent.py  unified_agent.py  viz.py
archived_sample/mongo_server/: db.py  models.py  tools.py
archived_sample/sql_server/: main.py  models.py
client/: agent.py  unified_agent.py
mongo_server/: main.py
mongodb/: config.py  errors.py
mongodb/metadata/: list_collections.py  list_databases.py
mongodb/src/: server.py
mongodb/src/tools/: base.py  connection.py
mongodb/src/tools/read/: aggregate.py  collection_indexes.py  count.py  find.py
mysql/: client.py  server.py
sql_server/: db.py  tools.py
viz_server/: main.py
